@@ -27,6 +27,8 @@ Library
 
 - Issue #24377: Fix a ref leak in OrderedDict.__repr__.
 
+- Issue #24369: Defend against key-changes during iteration.
+
 
 What's New in Python 3.5.0 beta 2?
 ==================================
